# weak-strong

./: README.md
weak-strong-functors/: .gitignore  README.md  weak-strong-functors.cabal
weak-strong-functors/src/: WeakStrong.agda
weak-strong-functors/src/WeakStrong/: Function.agda
weak-strong-functors/src/WeakStrong/Category/: Functor.agda  Functor.hs
weak-strong-functors/src/WeakStrong/Data/: List.agda  List.hs  Maybe.agda  Maybe.hs
weak-strong-functors/src/WeakStrong/Data/List/: Functor.agda
weak-strong-functors/src/WeakStrong/Data/Maybe/: Functor.agda
weak-strong-functors/src/WeakStrong/Relation/Binary/: PropositionalEquality.agda
