name:                weak-strong-functors
version:             0.1.0.0
author:              Juan Villa
maintainer:          jvilla@stackbuilders.com
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.8.3

library
  build-depends:       base >=4.7 && <4.8
  default-language:    Haskell2010
  exposed-modules:     WeakStrong.Category.Functor,
                       WeakStrong.Data.List,
                       WeakStrong.Data.Maybe
  ghc-options:         -Wall
  hs-source-dirs:      src
  other-extensions:    NoImplicitPrelude
